--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ a:hover {
 Header Area CSS
 =================================================*/
 .top-header {
-    background-color: #333;
+    background-color: #964c0b;
     padding-top: 3px;
     padding-bottom: 3px;
 }
